Add new game controller

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -215,6 +215,10 @@ input.button {
   border-style: none;
 }
 
+input.unchecked {
+  background: $shadowGrey;
+}
+
 input.hero-button {
   width: 100%;
 }
