--- a/src/css/game.scss
+++ b/src/css/game.scss
@@ -26,8 +26,7 @@ $player-min-height: 25px;
 .turn-card-player {
   position: relative;
   bottom: 0px;
-  left: 0px;
-  width: 100%;
+  right: 10px;
   min-height: $player-min-height;
 
   font-size: large;
